# rust-multiplatform

core/: Cargo.toml
core/src/: lib.rs
web/: Cargo.toml  build.bat  index.html  index.js  package-lock.json  package.json  webpack.config.js
web/src/: lib.rs
windows/: Cargo.toml
windows/src/: main.rs  windows_imports.rs
