[package]
name = "web"
version = "0.1.0"
authors = ["Nick Wessing <nick.wessing@centare.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
core = { path = "../core" }

[dependencies.web-sys]
version = "0.3.2"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
]